# dofi-old

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml
.github/actions/poetry/: action.yaml
.github/workflows/: build.yaml
alembic/: env.py
alembic/versions/: c252d06d44b8_initial_commit.py  eb57a14bb3af_add_unique_constraint_on_package_name.py
dofi/: __main__.py  main.py
dofi/cli/: app.py
dofi/cli/subcommand/: __init__.py  check.py  github.py  sync.py  update.py
dofi/database/: __init__.py  database.py
dofi/extra/: abc.py  api.py  types.py
dofi/extra/github/: api.py  schemas.py
dofi/models/: models.py  package.py
dofi/parser/: spec.py
dofi/service/: package.py
dofi/settings/: env.py
dofi/toolkit/: __init__.py  sync_package.py
dofi/utils/: network.py
public/test/: junit.xml  report.html
tests/: conftest.py  test_github_api.py  test_main.py  test_main_check.py  test_main_sync.py  test_main_update.py  test_network.py  test_package_service.py  test_parser_spec.py
tests/resources/: github_api_release_info_contents.json  test_1.yaml
tests/utils/: database.py  helper.py  network.py
